--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <title>Title</title>
+    <title>qq小游戏</title>
 
     <link rel="stylesheet" href="https://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css">
     <script src="https://code.jquery.com/jquery-1.8.3.min.js"></script>
@@ -24,7 +24,7 @@
 <div data-role="page">
 
     <div data-role="header">
-        <h1>欢迎访问我的主页</h1>
+        <h1>qq小游戏</h1>
     </div>
 
     <div data-role="content">
